# bazeldocker

./: BUILD.bazel  WORKSPACE
