package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")

container_run_and_commit_layer(
    name = "exec",
    image = "@fedora37//image",
    commands = [ 
		"touch /root/testfile",
    ],
)

container_image(
	name = "out",
	base = "@fedora37//image",
    layers = [":exec"],
	entrypoint = None,
)

container_push(
	name = "push",
	image = ":out",
	registry = "ghcr.io",
	repository = "bjencks/bazeldocker",
	tag = "latest",
	format = "OCI",
)